--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 *{
     margin: 0px;
+    padding: 0px;
+    outline: 0px;
 }
 
 body{
@@ -63,19 +65,48 @@ h1 {
     padding: 10px;
 }
 
-#conhecimentos{
+#divconhecimentos{
+ 
     display: inline-block;
 }
 
-#conhecimentos > p{
-    margin: auto;
+#divconhecimentos > p{
+    text-align: center;
     padding-bottom:10px;
     color: white;
     font: normal bolder 1.5em roboto, Arial, sans-serif;
-    width: 450px;
+    margin: auto;
 }
 
-#conhecimentos > p > img {
-    width: 30px;
-    height: 30px;
+.tecnologia > p > abbr > img {
+    padding-top: 10px;
+    width: 50px;
+    height: 50px;
+}
+
+.html {
+    margin: auto;
+    display: list-item;
+    width: 50px;
+    height: 50px;
+    background-image: url(imagens/html.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 20px;
+}
+
+.css {
+    margin: auto;
+    display: list-item;
+    width: 50px;
+    height: 50px;
+    background-image: url(imagens/css3.png);
+    background-repeat: no-repeat;
+    background-size: 50px;
+}
+
+ul{
+    margin: auto;
+    list-style: none;
+    columns: 2;
 }
